--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -455,7 +455,7 @@ olderCalls=Older Calls
 all=all
 
 # generalconfig
-autoStartOption=Auto - start SIP Communicator when computer restarts or reboots.
+autoStartOption=Auto - start {0} when computer restarts or reboots.
 groupChatMessages=Group chat messages in one window.
 logHistory=Log chat history
 showHistory=Show history
