Patches provided by Alan C Kelly that address issues: 458, 468, 469, 470.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4653 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -101,7 +101,7 @@ close=Cl&ose
 closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
 conference=Conference
 configure=&Configure
-configuration=Configuration
+configuration=Options
 connectionFailed=Connection failed
 connectionFailedMessage=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
 User name: {0} <BR>\
@@ -215,6 +215,7 @@ moveSubcontact=M&ove contact
 moveSubcontactInSameContact=The contact you have choosen is the same as \n the source one. Please choose another contact!
 moveSubcontactQuestion=<DIV>Are you sure you want to move <B> {0} </B> to <B> {1} </B> ?</DIV>
 moveToGroup=&Move to group
+moveContact=Move Contact
 moveContactError=&Contact cannot be moved
 msgDeliveryFailure=The above message could not be delivered
 msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offline messages. You could try to reach this contact through another protocol or wait until he/she becomes online.
@@ -242,7 +243,7 @@ noMultiChatAccountAvailable=No accounts, supporting multi user chat found. Check
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The {0} server does not recognize specified user id.
 notifications=Notifications
-ok=&Ok
+ok=&OK
 offline=Offline
 olderCalls=Older calls
 online=Online
@@ -308,7 +309,7 @@ format e.g. starting with +44 for the UK for example, +447777000000
 sendSmsNotSupported=The protocol you have selected doesn't support SMS messages.
 sendVia=Send via
 setStatusMessage=Set status message
-settings=&Settings
+settings=&Options
 showCallPanel=Show call panel
 showChannelsList=Show channels list
 showOffline=Show
@@ -505,7 +506,7 @@ newAccountTitle=Jabber new account registration
 registerNewAccountText=In case you don't have a Jabber account, click on this button to create a new one.
 chooseTitle=Jabber new account server chooser
 chooseServerText=Choose the server for your new account in the list below.
-okLabel=&Ok
+okLabel=&OK
 cancelLabel=C&ancel
 chooseLabel=&Choose
 serverColumn=Server
