Tooltip for Options  button in the main toolbar changed to "Options".
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4655 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -100,7 +100,7 @@ chatRoomSubjectChanged={0} has changed the subject to {1}
 close=Cl&ose
 closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
 conference=Conference
-configure=&Configure
+configure=&Options
 configuration=Options
 connectionFailed=Connection failed
 connectionFailedMessage=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
