General group chat UI enhancements.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4670 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -178,8 +178,9 @@ invitation=Invitation text
 invitationReceived=Invitation received
 invitationReceivedFormInfo={0} has invited you to join {1} chat room. You could accept, reject or ignore this invitation.
 invite=&Invite
-inviteContactFormInfo=Please write the name of the user you would like to invite. If you wish you could also precise the reason for this invitation.
+inviteContactFormInfo=Select the names of the contacts you would like to add to this conversation and then click Invite.
 inviteContactToChat=Invite contact to chat
+inviteReason=Invite reason
 isCalling=is calling...
 join=&Join
 joinAs=J&oin as
