--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -249,6 +249,7 @@ offline=Offline
 olderCalls=Older calls
 online=Online
 openInBrowser=Open in &browser
+openTools=Open Tools Menu
 options=Options
 passwd=Password
 paste=&Paste
