Major update for the dict protocol - Using an external library to manage the connection with the server - Enhanced account registration wizard
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4730 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -434,16 +434,37 @@ contactExtendedDesc=Extended contact info for
 contactInfoNotSupported=This protocol doesn't support server stored details for now. Try one of the other protocols.
 notSpecified=[Not specified]
 
-# dict accregwizz
-protocolNameDict=Dict
-protocolDescriptionDict=The Dict service protocol
-strategyList=List of strategies:
-strategyActu=Search strategies
-strategyDesc=Strategie is use to search similar words,if a translation was not found, thanks to different approaches. For example the Prefix strategies will search words which begin like the word you would translate.
+# Dict protocol
+dict.dictionaries=Dictionaries
+dict.anyDictionary=Any Dictionary
+dict.anyDictionaryFrom=Any Dictionary from {0}
+dict.firstMatch=First Match
+dict.noMatch=No match
+dict.matchResult=No definitions found for "{0}", perhaps you mean:\n
+dict.invalidDatabase=The current dictionary "{0}" doesn't exist anymore on the server.
+dict.invalidStrategy=The current strategy isn't available on the server.
 
-dictAccountInfoTitle=Dict Account Information
-firstAccount=This wizard will create your first Dict Account for you on dict.org.\n\n\
+# DICT Protocol Account Wizard
+dict.protocolName=Dict
+dict.protocolDescription=The Dict service protocol
+dict.host=Host
+dict.port=Port
+dict.serverInformations=Server informations
+dict.strategy=Strategy
+dict.strategySelection=Strategy selection
+dict.strategyList=List of strategies:
+dict.strategyActu=Search strategies
+dict.strategyDesc=Strategie is use to search similar words,if a translation was not found, thanks to different approaches. For example the Prefix strategies will search words which begin like the word you would translate.
+dict.accountInfoTitle=Dict Account Information
+dict.firstAccount=This wizard will create your first Dict Account for you on dict.org.\n\n\
 You can add new dictionary by going on Account Registration Wizard. Fill the host Field with dictionnary you would like to add.
+dict.threadConnect=Trying to connect to server
+dict.threadConnectFailed=Connexion attempt failed, this isn't a dict server or the server is offline
+dict.retrievingStrategies=Retrieving strategies
+dict.noStrategiesFound=No strategy found on the server
+dict.populateList=Populating list
+dict.closingConnexion=Closing connexion
+
 
 # extendedcallsearchhistory
 advancedCallHistorySearch=&Advanced call history search
