--- a/resources/languages/resources_fr.properties
+++ b/resources/languages/resources_fr.properties
@@ -347,3 +347,34 @@ newMessage=Nouveau Message.
 busyMessage=Désolé, je suis occupé pour le moment.
 brbMessage=Je suis absent, je reviens dans un moment.
 
+# DICT Protocol
+dict.dictionaries=Dictionnaires
+dict.anyDictionary=Tous les dictionnaires
+dict.anyDictionaryFrom=Tous les dictionnaires de {0}
+dict.firstMatch=Premier résultat
+dict.noMatch=Aucun résultat
+dict.matchResult=Aucune définition trouvée pour "{0}", vous souhaitez peut-être dire :\n
+dict.invalidDatabase=Le dictionnaire actuel "{0}" n'existe plus sur le serveur.
+dict.invalidStrategy=La stratégie actuelle n'existe plus sur le serveur.
+
+# DICT Protocol Account Wizard
+dict.protocolName=Dict
+dict.protocolDescription=Protocol du service Dict
+dict.host=Hôte
+dict.port=Port
+dict.serverInformations=Informations sur le serveur
+dict.strategy=Stratégie
+dict.strategySelection=Sélection de la stratégie
+dict.strategyList=Liste des stratégies :
+dict.strategyActu=Rechercher les stragéries
+dict.strategyDesc=Les stratégies sont utilisées pour rechercher les mots similaires si aucune définition n'a été trouvée. Il existe différentes approches ; par exemple : la stratégie Prefix recherchera tous les mots qui commencent comme le mot dont vous cherchez la définition.
+dict.accountInfoTitle=Information sur le compte Dict
+dict.firstAccount=Cet assistant va créer votre premier compte Dict sur le serveur dict.org.\n\n\
+Vous pouvez ajouter d'autres serveurs de dictionnaires en utilisant à nouveau cet assistant.
+dict.threadConnect=Tentative de connexion au serveur
+dict.threadConnectFailed=La tentative de connexion a échoué. Le serveur est hors ligne ou ce n'est pas un serveur de dictionnaires.
+dict.retrievingStrategies=Récupération des stratégies
+dict.noStrategiesFound=Aucune stratégie n'a été trouvée sur le serveur
+dict.populateList=Mise à jour de la liste
+dict.closingConnexion=Fermeture de la connexion
+
