Implements a ConfigurationForm which allows configuring the MediaService.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4742 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -748,3 +748,10 @@ sasUnsecuredAtPeerRequestTooltip=Call unsecured at peer request
 
 # Profiler4J
 profiler=Profiler4j
+
+MediaConfigurationForm_title=Media
+MediaConfigurationPanel_audio=&Audio:
+MediaConfigurationPanel_down=&Down
+MediaConfigurationPanel_encodings=&Encodings:
+MediaConfigurationPanel_up=&Up
+MediaConfigurationPanel_video=&Video:
