Makes TransparentPanel available outside impl.gui and uses it in MediaConfigurationForm.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4743 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -753,5 +753,6 @@ MediaConfigurationForm_title=Media
 MediaConfigurationPanel_audio=&Audio:
 MediaConfigurationPanel_down=&Down
 MediaConfigurationPanel_encodings=&Encodings:
+MediaConfigurationPanel_noPreview=Preview
 MediaConfigurationPanel_up=&Up
 MediaConfigurationPanel_video=&Video:
