Allows choosing <No Device> for each of the Audio and Video device configurations in the Media ConfigurationForm.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4762 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -749,6 +749,7 @@ sasUnsecuredAtPeerRequestTooltip=Call unsecured at peer request
 # Profiler4J
 profiler=Profiler4j
 
+DeviceConfigurationComboBoxModel_noDevice=<No Device>
 MediaConfigurationForm_title=Media
 MediaConfigurationPanel_audio=&Audio:
 MediaConfigurationPanel_down=&Down
