--- a/resources/languages/resources_fr.properties
+++ b/resources/languages/resources_fr.properties
@@ -28,20 +28,20 @@
 about=&A propos
 accept=&Accepter
 account=compte
-accountRegistrationWizard=Assistant d''enregistrement de compte
+accountRegistrationWizard=Assistant d'enregistrement de compte
 accounts=Comptes
 activateOnlyWhenMinimized=Activer uniquement en mode réduit
 add=&Ajouter
 addContact=&Ajouter un contact
 addContactError=Échec lors de l''ajout du contact : {0}
-addContactErrorTitle=Échec lors de l''ajout d''un contact
+addContactErrorTitle=Échec lors de l'ajout d''un contact
 addContactExistError=Le contact {0} existe déjà dans votre liste de contact.
-addContactIdentifier=Dans le champ suivant, veuillez entrer l''identifiant du contact que vous souhaitez ajouter.
-addContactWizard=Assistant d''ajout de contact
+addContactIdentifier=Dans le champ suivant, veuillez entrer l'identifiant du contact que vous souhaitez ajouter.
+addContactWizard=Assistant d'ajout de contact
 addGroupLocalError=Échec lors de l''ajout du groupe : {0}. Le problème est dû à un échec d''E/S lors d''une opération locale.
 addGroupNetError=Échec lors de l''ajout du groupe : {0}. Le problème est dû à un échec du réseau. Prière, de vérifier votre connection au réseau avant de réessayer.
 addGroupError=Échec lors de l''ajout du groupe : {0}.
-addGroupErrorTitle=Erreur lors de l''ajout de groupe
+addGroupErrorTitle=Erreur lors de l'ajout de groupe
 addGroupExistError=Le groupe {0} existe déjà dans votre liste de contact.
 addSubcontact=&Ajouter un sous-contact
 all=&Tous
@@ -51,18 +51,18 @@ appearance=Apparence
 application=Application
 apply=&Effectuer
 at=arobase
-authAccepted=Le contact a accepté votre requête d''autorisation.
-authenticationWindowTitle=Demande d''authentification
-authRejected=Le contact a rejeté votre demande d''autorisation.
-authorizationRequested=Demande d''autorisation
+authAccepted=Le contact a accepté votre requête d'autorisation.
+authenticationWindowTitle=Demande d'authentification
+authRejected=Le contact a rejeté votre demande d'autorisation.
+authorizationRequested=Demande d'autorisation
 authorizationRequestedInfo=Le contact {0} demande votre autorisation.
 authenticationFailed=L''authentification a échouée pour le compte suivant : Nom d''utilisateur : {0}, Nom du serveur : {1}. Le mot de passe que vous avez fourni est incorrect.
-authorizationResponse=Réponse de demande d''autorisation
+authorizationResponse=Réponse de demande d'autorisation
 autoPopup=Mettre la fenêtre au premier plan
 awayStatus=Absent
 back=&De retour
 ban=&Exclure
-banFailed=Échec lors de l''exclusion
+banFailed=Échec lors de l'exclusion
 banFailedGeneralError=Erreur lors de l''exclusion {0}. Une erreur au niveau du serveur est survenue.
 banFailedNotAllowed=Erreur lors de l''exclusion {0}. Le propriétaire et l''administrateur du salon ne peuvent pas être exclu.
 banFailedNotEnoughPermissions=Erreur lors de l''exclusion {0}. Vous n''avez pas les droits suffisant pour cela.
@@ -70,7 +70,7 @@ brbMessage=Je suis parti, mais je reviens tout de suite.
 busyMessage=Désolé, je suis très occupé.
 call=Appel
 callVia=Appel via:
-callList=Liste d''appels
+callList=Liste d'appels
 cancel=&Annuler
 chatRoomAlreadyJoined=Vous avez déjà rejoint le salon {0}.
 chatRoomConfiguration=Configuration du salon {0}
@@ -85,7 +85,7 @@ chatRoomName=Nom du salon
 chatRoomNameInfo=Dans le champ suivant, veuillez entrer le nom du salon que vous souhaitez créer.
 chatRoomNotExist=Le salon {0} est introuvable sur le serveur {1}. Prière de vérifier la validité du nom que vous avez saisi.
 chatRoomNotConnected=Vous devez vous connecter pour rejoindre le salon {0}.
-chatRoomNotJoined=Vous devez d''abord rejoindre un salon pour effectuer cette opération.
+chatRoomNotJoined=Vous devez d'abord rejoindre un salon pour effectuer cette opération.
 chatRoomOptions=Options du salon
 chatRoomRegistrationRequired=Vous devez être enregistré avant de pouvoir le rejoindre le salon {0}.
 chatRoomRequiresPassword=Le salon {0} nécessite un mot de passe.
@@ -103,18 +103,18 @@ contactAddress=Adresse du contact
 contactNotSupportingTelephony=Le contact choisit {0} ne supporte pas la téléphonie.
 contactPausedTyping={0} s''est arrêté d''écrire le message
 contactTyping={0} est en train d''écrire un message
-contactTypingStateStale=L''état de la saisie ne peut pas être mise à jour
+contactTypingStateStale=L'état de la saisie ne peut pas être mise à jour
 contacts=Contacts
 continue=&Continuer
 copy=&Copier
-copyLink=Copier l''&adresse
+copyLink=Copier l'&adresse
 create=C&réer
 createChatRoom=&Créer un salon...
 createChatRoomNotSupported=Échec lors de la création du salon : {0}. Le serveur {1} ne supporte pas cette opération.
 createChatRoomError=Échec lors de la création du salon : {0}.
 createChatRoomWizard=Assistant de création de salon
 createGroup=&Créer un groupe
-createGroupName=Veiller saisir dans le champ suivant le nom du groupe que vous désirer créer.
+createGroupName=Veuiller saisir dans le champ suivant le nom du groupe que vous désirer créer.
 createFirstGroupWizard=Votre liste de contacts ne contient aucun groupe. Prière de créer un groupe (Fichier/Créer groupe) en premier lieu.
 cut=C&ouper
 date=Date
@@ -124,10 +124,10 @@ dialpad=Clavier téléphonique
 dndStatus=Ne pas déranger
 doNotAskAgain=Ne plus redemander
 doNotShowAgain=Ne plus afficher ce message
-dontSupportWebInfo=Ce contact ne dispose pas d''informations sur le web.
+dontSupportWebInfo=Ce contact ne dispose pas d'informations sur le web.
 duration=Durée
 edit=&Éditer
-emptyHistory=&Vider l''historique
+emptyHistory=&Vider l'historique
 enableNotifications=Activer les notifications
 enableTypingNotifications=Activer les notifications de &saisie.
 error=Erreur
@@ -148,8 +148,8 @@ font=Police
 haveToBeConnectedToJoin=Vous devez être connecté avant de pouvoir rejoindre un salon. Prière de vous connectez avant de réessayer.
 haveToBeConnectedToLeave=Vous devez être connecté pour pouvoir quitter un salon.
 help=?
-hideCallPanel=&Masquer la zone d''appels
-hideMainWindow=Cliquer sur le bouton X ne quittera pas l''application, mais la masquera seulement. Utilisez "Fichier/Quitter" si vous souhaitez quitter l''application.
+hideCallPanel=&Masquer la zone d'appels
+hideMainWindow=Cliquer sur le bouton X ne quittera pas l'application, mais la masquera seulement. Utilisez "Fichier/Quitter" si vous souhaitez quitter l'application.
 history=&Historique
 historyContact=Historique - {0}
 hour=Heure
@@ -157,20 +157,20 @@ identifier=Identifiant
 ignore=&Ignorer
 insertSmiley=Insérer une émoticône
 invalidCall=Appel invalide
-invitation=Motif de l''invitation
+invitation=Motif de l'invitation
 invitationReceived=Invitation reçue
 invitationReceivedFormInfo={0} vous a invité à rejoindre le salon {1}. Vous pouvez accepter, rejeter ou ignorer cette invitation.
 invite=&Inviter
-inviteContactFormInfo=Merci de renseigner le nom de l''utilisateur que vous souhaitez inviter. Si vous le souhaitez, vous pouvez également préciser le motif de cette invitation.
+inviteContactFormInfo=Merci de renseigner le nom de l'utilisateur que vous souhaitez inviter. Si vous le souhaitez, vous pouvez également préciser le motif de cette invitation.
 inviteContactToChat=Inviter un contact à discuter
 join=&Rejoindre
 joinAs=Re&joindre comme
 joinChatRoom=Re&joindre le salon...
 joinChatRoomTitle=Rejoindre le salon
-joinChatRoomName=Prière d''entrer le nom du salon que vous souhaitez rejoindre.
+joinChatRoomName=Prière d'entrer le nom du salon que vous souhaitez rejoindre.
 joinChatRoomWizard=Assistant pour rejoindre un salon
 kick=&Exclure
-kickFailed=Échec de la tentative d''exclusion
+kickFailed=Échec de la tentative d'exclusion
 kickFailedGeneralError=Échec de la tentative d''exclusion {0}. Une erreur au niveau du serveur est survenue.
 kickFailedNotAllowed=Échec de la tentative d''exclusion {0}. Le propriétaire et l''administrateur du salon ne peuvent être exclu.
 kickFailedNotEnoughPermissions=Échec de la tentative d''exclusion {0}. Vous n''avez pas assez de privilèges pour cela.
@@ -191,8 +191,8 @@ moveSubcontactInSameContact=Le contact choisi est le même que celui que vous vo
 moveToGroup=&Déplacer au sein du groupe
 moveContactError=Le &contact ne peut pas être déplacer
 msgDeliveryFailure=Le précédent message ne peut pas être délivré
-msgDeliveryOfflineNotSupported=Le protocole que vous utilisé ne supporte pas l''envoi de messages en mode "déconnecté". Vous pouvez essayer de joindre votre contact au moyen d''un autre protocole ou attendre jusqu''à ce qu''il ou elle soit "connecté(e)".
-msgDeliveryInternalError=Une erreur interne est survenue. Merci de reporter ce problème à l''adresse suivante : http://www.sip-communicator.org/index.php/Development/BugsAndIssues
+msgDeliveryOfflineNotSupported=Le protocole que vous utilisé ne supporte pas l'envoi de messages en mode "déconnecté". Vous pouvez essayer de joindre votre contact au moyen d'un autre protocole ou attendre jusqu'à ce qu'il ou elle soit "connecté(e)".
+msgDeliveryInternalError=Une erreur interne est survenue. Merci de reporter ce problème à l'adresse suivante : http://www.sip-communicator.org/index.php/Development/BugsAndIssues
 msgNotDelivered=Un problème au niveau du réseau est survenue.
 msgReceived={0} vous a envoyé un message
 msgSendConnectionProblem=Vous devez être connecté pour pouvoir envoyer des messages.
@@ -207,10 +207,10 @@ newName=Nouveau nom :
 newStatusMessage=Nouveau message de statut
 no=Non
 noAccountFound=Pour utiliser SIP-Communicator, vous devez au moins configurer un compte. Les pages suivantes vous guiderons pour en configurer un.
-noAvailableRooms=La liste des salons de ce serveur n''est pas accessible pour le moment.
+noAvailableRooms=La liste des salons de ce serveur n'est pas accessible pour le moment.
 noMessage=Aucun message
-noMultiChatAccountAvailable=Aucun de vos comptes ne permet l''accès et l''utilisation de salon de discussion. Pour plus d''informations sur les protocoles supportant les salons de discussion, reportez vous à l''adresse suivante : sip-communicator.org.
-nonEmptyChatWindowClose=Vous venez de demander la fermeture d''une fenêtre de discussion avec un message non-envoyé. Étes-vous certain de vouloir fermer cette fenêtre ?
+noMultiChatAccountAvailable=Aucun de vos comptes ne permet l'accès et l'utilisation de salon de discussion. Pour plus d'informations sur les protocoles supportant les salons de discussion, reportez vous à l''adresse suivante : sip-communicator.org.
+nonEmptyChatWindowClose=Vous venez de demander la fermeture d'une fenêtre de discussion avec un message non-envoyé. Étes-vous certain de vouloir fermer cette fenêtre ?
 nonExistingUserId=Le serveur {0} ne supporte pas l''identifiant de compte utilisé.
 notifications=Notifications
 ok=&Ok
@@ -231,7 +231,7 @@ ready=Prêt
 reason=Raison
 reconnectionLimitExceeded=Vous vous êtes déconnecté et reconnecté trop rapidement au serveur. Le compte suivant: Nom d''utilisateur : {0}, Nom du serveur : {1} est temporairement banni et va devoir attendre encore un peu avant de réessayer de se reconnecter.
 refresh=Rafraîchir
-registrationTimeout=Expiration de l''enregistrement :
+registrationTimeout=Expiration de l'enregistrement :
 reject=&Rejeter
 rememberPassword=Mémoriser le mot de passe
 remove=&Supprimer
@@ -241,12 +241,12 @@ removeContact=&Supprimer le sous-contact
 removeContactText=<DIV>Êtes-vous certain de vouloir supprimer <b> {0} </b><br>de votre liste de contact ?</DIV>
 removeGroup=&Supprimer le groupe
 rename=&Renommer
-renameContact=Re&nnomer le contact
+renameContact=Re&nommer le contact
 renameContactWizard=Dans le champ suivant, vous pouvez saisir le nom de contact que vous souhaitez utiliser.
-renameGroup=Re&nnomer le groupe
+renameGroup=Re&nommer le groupe
 renameGroupInfo=Dans le champ suivant, vous pouvez saisir le nom de groupe que vous souhaitez utiliser.
 request=&Demander
-requestAuthorization=&Demande d''autorisation
+requestAuthorization=&Demande d'autorisation
 requestAuthorizationInfo=Impossible d''ajouter {0} à votre liste de contacts. {0} doit vous autoriser votre demande pour l''ajouter. Merci d''entrer votre demande ci-dessous.
 requestAuthReason=Raison de la demande
 requestAuthReasonEnter=Entrer la raison de votre demande
@@ -257,7 +257,7 @@ search=&Rechercher
 searchForChatRooms=&Rechercher un salon
 searchForChatRoomsText=Cliquez sur le bouton ci-dessous pour afficher tous les salons existant du serveur sélectionné. Puis, choisissez celui que vous souhaitez rejoindre et cliquez le bouton "rejoindre".
 securityAuthorityRealm=Le serveur {0} a demandé votre autorisation.
-selectAccount=Choix d''un compte
+selectAccount=Choix d'un compte
 selectAccountRegistration=Dans la liste ci-dessous, choisissez un assistant de configuration pour créer un nouveau compte.
 selectAccountRegWizardTitle=Choisissez un enregistrement de compte
 selectGroup=Choisissez un groupe
@@ -272,11 +272,11 @@ selectContactSupportingInfo=Aucune information n''est disponible pour ce contact
 sendMessage=&Envoyer un message
 sendAsSms=Envoyer tel un SMS
 sendSms=E&nvoyer un SMS
-sendSmsNotSupported=Le protocole que vous avez sélectionné ne permet pas l''envoi de SMS.
+sendSmsNotSupported=Le protocole que vous avez sélectionné ne permet pas l'envoi de SMS.
 sendVia=Envoyer via
 setStatusMessage=Définir le statut du message
 settings=&Paramètres
-showCallPanel=Afficher la zone d''appels
+showCallPanel=Afficher la zone d'appels
 showChannelsList=Afficher la liste des canaux
 showOfflineUsers=Masquer/Afficher les utilisateurs "déconnectés"
 specifyReason=Dans le champ suivant, vous pouvez saisir la raison de cette opération.
@@ -287,19 +287,19 @@ statusChangeNetworkFailure=Échec lors du changement de statut pour le compte : 
 statusMessageInfo=Dans le champ suivant, vous pouvez saisir le nouveau message que vous souhaitez utiliser.
 subject=Sujet
 summary=Sommaire
-today=Aujourd''hui
+today=Aujourd'hui
 tools=&Outils
 typeYourRequest=Saisissez ici votre demande
 uin=Identificateur:
 unknown=Utilisateur inconnu
 useCtrlEnterToSend=Utilisez Ctrl-&Enter pour envoyer
-msgDeliveryFailedUnknownError=Une erreur inconnue est survenue pendant l''envoi de votre message.
+msgDeliveryFailedUnknownError=Une erreur inconnue est survenue pendant l'envoi de votre message.
 unregisteredMessage=Impossible de se connecter avec le compte : Nom d''utilisateur : {0}, Nom du serveur : {1}. Vous êtes actuellement "déconnecté".
 updateAutomatically=Installer les mises à jour automatiquement
 updates=Mises à jour
-userInfo=&Informations de l''utilisateur
+userInfo=&Informations de l'utilisateur
 view=&Voir
-viewHistory=Voir l''&historique
+viewHistory=Voir l'&historique
 warning=Attention
 yes=Oui
 yesterday=Hier
@@ -338,7 +338,7 @@ close=Fermer
 onlineStatus=Disponible
 offlineStatus=Hors ligne
 messageReceived=Message recu
-failedToLoadAddContactDialog=Impossible de lancer l''assistant d''ajout de contact.
+failedToLoadAddContactDialog=Impossible de lancer l'assistant d''ajout de contact.
 setStatusMessage=Définir un message de status.
 newStatusMessage=Nouveau message de status.
 statusMessageInfo=Vous pouvez saisir ci-dessous le nouveau message que vous voulez utiliser.
@@ -354,7 +354,7 @@ dict.anyDictionaryFrom=Tous les dictionnaires de {0}
 dict.firstMatch=Premier résultat
 dict.noMatch=Aucun résultat
 dict.matchResult=Aucune définition trouvée pour "{0}", vous souhaitez peut-être dire :\n
-dict.invalidDatabase=Le dictionnaire actuel "{0}" n'existe plus sur le serveur.
+dict.invalidDatabase=Le dictionnaire actuel "{0}" n''existe plus sur le serveur.
 dict.invalidStrategy=La stratégie actuelle n'existe plus sur le serveur.
 
 # DICT Protocol Account Wizard
