Fixes issue #497 (Add tooltips to call panel buttons). The Secure button doesn't have a tooltip when in secure mode but that seems to be the design of the button because going clear isn't supported.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4800 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -749,7 +749,13 @@ sasUnsecuredAtPeerRequestTooltip=Call unsecured at peer request
 # Profiler4J
 profiler=Profiler4j
 
+CallParticipantPanel_enterFullScreenButtonToolTipText=Enter Fullscreen
+CallParticipantPanel_exitFullScreenButtonToolTipText=Exit Fullscreen
+
 DeviceConfigurationComboBoxModel_noDevice=<No Device>
+
+HoldButton_toolTipText=Toggle Hold
+
 MediaConfigurationForm_title=Media
 MediaConfigurationPanel_audio=&Audio:
 MediaConfigurationPanel_down=&Down
@@ -757,3 +763,7 @@ MediaConfigurationPanel_encodings=&Encodings:
 MediaConfigurationPanel_noPreview=Preview
 MediaConfigurationPanel_up=&Up
 MediaConfigurationPanel_video=&Video:
+
+MuteButton_toolTipText=Toggle Mute
+
+TransferCallButton_toolTipText=Transfer Call
