Fixes some missing strings.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4823 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -94,6 +94,7 @@ service.gui.CHAT_ROOMS=Chat rooms
 service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} has changed the subject to {1}
 service.gui.CLOSE=Cl&ose
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=You have received a new message less than 2 seconds ago. Are you sure you want to service.gui.CLOSE this chat?
+service.gui.CONNECTION_FAILED_MSG=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
 service.gui.CONNECTION_EXPIRED_MSG=You are currently disconnected from the {0} server.
 service.gui.CONNECTION_REQUIRED_TO_service.gui.JOIN=You have to be connected in order to join a chat room. Please connect and then try again.
 service.gui.CONNECTION_REQUIRED_TO_LEAVE=You have to be connected in order to leave a chat room.
