--- a/resources/languages/resources_bg.properties
+++ b/resources/languages/resources_bg.properties
@@ -67,6 +67,7 @@ service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} смени темата на {1}
 service.gui.CLOSE=&Затваряне
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=Получихте съобщение преди по-малко от 2 секунди. Сигурни ли сте, че въпреки това желаете да затворите прозореца за този разговор?
 service.gui.OPTIONS=&Настройване
+service.gui.CONNECTION_FAILED_MSG=Връзката към сървър {1} е прекъсната за потребител {0}.
 service.gui.CONNECTION_EXPIRED_MSG=В момента не сте свързани с {0}.
 service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY={0} не поддържа телефонните разговори.
 service.gui.CONTACT_PAUSED_TYPING={0} спря да пише
