--- a/resources/languages/resources_de.properties
+++ b/resources/languages/resources_de.properties
@@ -70,6 +70,7 @@ service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} hat das Thema auf {1} geändert
 service.gui.CLOSE=&Schließen
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=Sie haben gerade eine Nachricht erhalten. Sind Sie sicher, dass Sie die Gesprächsrunde verlassen wollen?
 service.gui.OPTIONS=&Konfigurieren
+service.gui.CONNECTION_FAILED_MSG=Verbindung für das folgende Konto fehlgeschlagen: Benutzername: {0}, Servername: {1}.
 service.gui.CONNECTION_EXPIRED_MSG=Sie sind nicht zum Server {0} verbunden
 service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=Der gewählte {0} Kontakt unterstützt keine Telefonie.
 service.gui.CONTACT_PAUSED_TYPING={0} unterbricht das Tippen
