--- a/resources/languages/resources_fr.properties
+++ b/resources/languages/resources_fr.properties
@@ -86,6 +86,7 @@ service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} a changé le sujet à {1}
 service.gui.CLOSE=F&ermer
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=Vous avez reçu un message il y a moins de 2 secondes. Êtes-vous sûr de vouloir fermer cette conversation ?
 service.gui.OPTIONS=&Configurer
+service.gui.CONNECTION_FAILED_MSG=Échec de connection pour le compte : Nom d''utilisateur : {0}, Nom du serveur : {1}.
 service.gui.CONNECTION_EXPIRED_MSG=Vous avez été déconnecte du serveur {0}.
 service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=Le contact choisit {0} ne supporte pas la téléphonie.
 service.gui.CONTACT_PAUSED_TYPING={0} s''est arrêté d''écrire le message
