--- a/resources/languages/resources_it.properties
+++ b/resources/languages/resources_it.properties
@@ -86,6 +86,7 @@ service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} ha impostato il titolo a {1}
 service.gui.CLOSE=Chiudi
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=Hai ricevuto un messaggio da meno di 2 secondi. Sei sicuro di volere chiudere?
 service.gui.OPTIONS=&Configura
+service.gui.CONNECTION_FAILED_MSG=Impossibile connettere l'account: Username: {0}, Server: {1}.
 service.gui.CONNECTION_EXPIRED_MSG=Sei attualmente disconnesso dal server {0}.
 service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=Il contatto {0} non ha supporto telefonico.
 service.gui.CONTACT_PAUSED_TYPING={0} ha interrotto la digitazione
