--- a/resources/languages/resources_pt.properties
+++ b/resources/languages/resources_pt.properties
@@ -84,6 +84,7 @@ service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} mudou o assunto para {1}
 service.gui.CLOSE=Fechar
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=Voçê recebeu uma nova mensagem à menos de 2 segundos atrás. Tem a certeza que deseja fechar este chat?
 service.gui.OPTIONS=&Configurar
+service.gui.CONNECTION_FAILED_MSG=Falha na chamada para a conta seguinte: Nome do usuário: {0}, Nome do servidor: {1}.
 service.gui.CONNECTION_EXPIRED_MSG=Voçê encontra-se de momento desligado {0} do servidor.
 service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=O contato escolhido {0} não suporta telefonia.
 service.gui.CONTACT_PAUSED_TYPING={0} parou de escrever a mensagem
