--- a/resources/languages/resources_ro.properties
+++ b/resources/languages/resources_ro.properties
@@ -67,6 +67,7 @@ service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} a schimbat subiectul la {1}
 service.gui.CLOSE=&Închide
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=Ați primit un mesaj acum 2 secunde. Sunteți sigur ca vreți sa terminați conversația ?
 service.gui.OPTIONS=&Configurează
+service.gui.CONNECTION_FAILED_MSG=Eroare de conexiune pentru contul: Nume utilizator: {0}, Nume server: {1}.
 service.gui.CONNECTION_EXPIRED_MSG=Momentan sunteți deconectat(ă) de la server {0}.
 service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=Contactul {0} ales nu permite telefonie.
 service.gui.CONTACT_PAUSED_TYPING={0} s-a oprit din scrierea mesajului
