--- a/resources/languages/resources_zh_CN.properties
+++ b/resources/languages/resources_zh_CN.properties
@@ -71,6 +71,7 @@ service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} 已经更换了新主题 {1}
 service.gui.CLOSE=C&关闭
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=您刚收到新消息, 是否要结束本次聊天?
 service.gui.OPTIONS=&配置
+service.gui.CONNECTION_FAILED_MSG=账号登录失败: 用户名: {0}, 服务器名: {1}.
 service.gui.CONNECTION_EXPIRED_MSG=您已经断开了与服务器 {0} 的连接.
 service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=您选择的联系人  {0} 不支持通话.
 service.gui.CONTACT_PAUSED_TYPING={0} 停止输入
