Fixes some strings.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4826 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -93,7 +93,7 @@ service.gui.CHAT_ROOM_REQUIRES_PASSWORD=The {0} chat room has requested a passwo
 service.gui.CHAT_ROOMS=Chat rooms
 service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} has changed the subject to {1}
 service.gui.CLOSE=Cl&ose
-service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=You have received a new message less than 2 seconds ago. Are you sure you want to service.gui.CLOSE this chat?
+service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
 service.gui.CONNECTION_FAILED_MSG=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
 service.gui.CONNECTION_EXPIRED_MSG=You are currently disconnected from the {0} server.
 service.gui.CONNECTION_REQUIRED_TO_service.gui.JOIN=You have to be connected in order to join a chat room. Please connect and then try again.
@@ -208,8 +208,8 @@ service.gui.NEW_NAME=New name
 service.gui.NO=No
 service.gui.NO_AVAILABLE_ROOMS=The list of rooms for this server is currently not available.
 service.gui.NO_MESSAGE=No message
-service.gui.NO_GROUP_CHAT_ACCOUNT_AVAILABLE=No service.gui.ACCOUNTS, supporting multi user chat found. Check sip-communicator.org for more information on which protocols support multi user chat.
-service.gui.NON_EMPTY_CHAT_WINDOW_CLOSE=You're trying to service.gui.CLOSE a chat with a non-sent message. Are you sure you want to service.gui.CLOSE this chat?
+service.gui.NO_GROUP_CHAT_ACCOUNT_AVAILABLE=No accounts, supporting multi user chat found. Check sip-communicator.org for more information on which protocols support multi user chat.
+service.gui.NON_EMPTY_CHAT_WINDOW_CLOSE=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 service.gui.NON_EXISTING_USER_ID=The {0} server does not recognize specified user id.
 service.gui.NOTIFICATIONS=Notifications
 service.gui.OK=&OK
@@ -256,8 +256,8 @@ service.gui.SELECT_ACCOUNT=Select account
 service.gui.SELECT_GROUP=Select group
 service.gui.SELECT_GROUP_WIZARD_MSG=The list below contains all groups in your Contact List. Select the one, where you would like to add the new contact.
 service.gui.SELECT_GROUP_WIZARD=Specify group
-service.gui.SELECT_PROVIDERS_FOR_CHAT_ROOM=The list below contains all service.gui.ACCOUNTS that support the multi user chat feature. Select the one you would like to use to create your chat room.
-service.gui.SELECT_PROVIDERS_WIZARD_MSG=The list below contains all registered service.gui.ACCOUNTS. Select the one you would like to use to communicate with the new contact.
+service.gui.SELECT_PROVIDERS_FOR_CHAT_ROOM=The list below contains all accounts that support the multi user chat feature. Select the one you would like to use to create your chat room.
+service.gui.SELECT_PROVIDERS_WIZARD_MSG=The list below contains all registered accounts. Select the one you would like to use to communicate with the new contact.
 service.gui.SELECT_PROVIDERS_WIZARD=Select account
 service.gui.SEND=&Send
 service.gui.SEND_FILE=Send &file
@@ -583,7 +583,7 @@ plugin.updatechecker.DIALOG_TITLE=New version available
 plugin.updatechecker.DIALOG_MESSAGE=<html>A new version of {0} is available for download.
 plugin.updatechecker.DIALOG_MESSAGE_2=<br>{0} ({1}): <br>
 plugin.updatechecker.BUTTON_DOWNLOAD=Download
-plugin.updatechecker.BUTTON_CLOSE=service.gui.CLOSE
+plugin.updatechecker.BUTTON_CLOSE=Close
 
 # whiteboard
 plugin.whiteboard.TITLE=Whiteboard [Beta]
@@ -640,7 +640,7 @@ plugin.keybindings.NEXT_CHAT_TAB=Next Chat Tab
 plugin.keybindings.PREVIOUS_CHAT_TAB=Previous Chat Tab
 plugin.keybindings.OPEN_SMILIES=Show Smilies
 plugin.keybindings.OPEN_HISTORY=Show History
-plugin.keybindings.service.gui.CLOSE=service.gui.CLOSE Chat Window
+plugin.keybindings.CLOSE=Close Chat Window
 plugin.keybindings.NEXT_CONTACT_LIST_TAB=Next Contact List Tab
 plugin.keybindings.PREVIOUS_CONTACT_LIST_TAB=Previous Contact List Tab
 plugin.keybindings.MAIN_RENAME=Rename contact
