Changes ? in the main menu to Help for the default, French and Bulgarian languages.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4865 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -137,7 +137,7 @@ service.gui.FILE=&File
 service.gui.FINISH=&Finish
 service.gui.FONT=Font
 service.gui.HANG_UP=Hang up
-service.gui.HELP=?
+service.gui.HELP=&Help
 service.gui.HIDE_OFFLINE_CONTACTS=Hide inactive contacts
 service.gui.HIDE_MAIN_WINDOW=<DIV>Clicking the X window button will not exit the application, \
 but only <BR> hide it. If you wish to exit the application choose File/Quit.</DIV>
