--- a/resources/languages/resources_fr.properties
+++ b/resources/languages/resources_fr.properties
@@ -126,7 +126,7 @@ service.gui.FINISH=&Terminer
 service.gui.FONT=Police
 service.gui.CHAT_ROOM_NOT_CONNECTED=Vous devez être connecté avant de pouvoir rejoindre un salon. Prière de vous connectez avant de réessayer.
 service.gui.CHAT_ROOM_LEAVE_NOT_CONNECTED=Vous devez être connecté pour pouvoir quitter un salon.
-service.gui.HELP=?
+service.gui.HELP=&Aide
 service.gui.HIDE_MAIN_WINDOW=Cliquer sur le bouton X ne quittera pas l'application, mais la masquera seulement. Utilisez "Fichier/Quitter" si vous souhaitez quitter l'application.
 service.gui.HISTORY=&Historique
 service.gui.HISTORY_CONTACT=Historique - {0}
