--- a/resources/languages/resources_bg.properties
+++ b/resources/languages/resources_bg.properties
@@ -107,7 +107,7 @@ service.gui.FINISH=&Приключи
 service.gui.FONT=Шрифт
 service.gui.CHAT_ROOM_NOT_CONNECTED=Трябва да сте свързани със сървъра преди да влезете в стаята. Свържете се и опитайте пак.
 service.gui.CHAT_ROOM_LEAVE_NOT_CONNECTED=Трябва да се свържете преди да напуснете стаята (парадоксално, а :) ).
-service.gui.HELP=?
+service.gui.HELP=&Помощ
 service.gui.HIDE_MAIN_WINDOW=Бутонът "X" няма да прекрати програмата а само ще я скрие.<br/>Ако желаете да излезнете можете да го направите от меню Файл/Изход.
 service.gui.HISTORY=&История
 service.gui.HISTORY_CONTACT=История - {0}
