Fix missing strings.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4881 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -185,6 +185,7 @@ service.gui.MOVE=Move
 service.gui.MOVE_SUBCONTACT=M&ove contact
 service.gui.MOVE_SUBCONTACT_MSG=Select the contact or the group, where you would like to move the selected contact.
 service.gui.MOVE_SUBCONTACT_FAILED=The contact you have chosen is the same as \n the source one. Please choose another contact!
+service.gui.MOVE_SUBCONTACT_QUESTION=Are you sure you want to move {0} to {1}?
 service.gui.MOVE_TO_GROUP=&Move to group
 service.gui.MOVE_CONTACT=Move Contact
 service.gui.MOVE_CONTACT_ERROR=&Contact cannot be moved
