--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -212,7 +212,7 @@ service.gui.NO_MESSAGE=No message
 service.gui.NO_GROUP_CHAT_ACCOUNT_AVAILABLE=No accounts, supporting multi user chat found. Check sip-communicator.org for more information on which protocols support multi user chat.
 service.gui.NON_EMPTY_CHAT_WINDOW_CLOSE=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 service.gui.NON_EXISTING_USER_ID=The {0} server does not recognize specified user id.
-service.gui.NOTIFICATIONS=Notifications
+service.gui.NOTIFICATIONS=Notifications 
 service.gui.OK=&OK
 service.gui.OFFLINE=Offline
 service.gui.OLDER_CALLS=Older calls
@@ -292,6 +292,8 @@ service.gui.TRANSFER_CALL_TITLE=Transfer Call
 service.gui.TRANSPARENCY_NOT_ENABLED=Transparency is not supported by your current configuration.
 service.gui.TYPE_YOUR_REQUEST=Type your request here
 service.gui.USER_IDENTIFIER=User identifier:
+service.gui.USER_EXISTS_ERROR=This user already exists on the selected network. Please choose another user or network.
+service.gui.USERNAME_NULL=Please fill the name of your account.
 service.gui.UNKNOWN=Unknown user
 service.gui.MSG_DELIVERY_UNKNOWN_ERROR=Unknown error has occured while delivering your message.
 service.gui.UNREGISTERED_MESSAGE=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
@@ -491,7 +493,6 @@ plugin.jabberaccregwizz.COMMENT_COLUMN=Comment
 plugin.jabberaccregwizz.RESOURCE=Resource
 plugin.jabberaccregwizz.PRIORITY=Priority
 plugin.jabberaccregwizz.XMPP_ERROR=XMPP Error
-plugin.jabberaccregwizz.USER_EXISTS_ERROR=This user already exist on this server. Choose another user or server.
 plugin.jabberaccregwizz.UNKNOWN_XMPP_ERROR=Unknown XMPP error. Verify that the server name is correct.
 plugin.jabberaccregwizz.NOT_SAME_PASSWORD=The two entered password aren't the same.
 plugin.jabberaccregwizz.OVERRIDE_SERVER_DEFAULT_OPTIONS=Override server default options
