Add some ZRTP information texts.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4914 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -563,7 +563,7 @@ plugin.sipaccregwizz.KEEP_ALIVE_INTERVAL=Keep alive interval
 plugin.sipaccregwizz.KEEP_ALIVE_INTERVAL_INFO=Between 1 and 3600 seconds
 plugin.sipaccregwizz.REGISTER=REGISTER
 plugin.sipaccregwizz.OVERRIDE_SERVER_DEFAULT_OPTIONS=Override server default options
-plugin.sipaccregwizz.ENABLE_DEFAULT_ENCRYPTION=Enable default call encryption 
+plugin.sipaccregwizz.ENABLE_DEFAULT_ENCRYPTION=Enable support to encrypt calls
 
 # ssh accregwizz
 plugin.sshaccregwizz.PROTOCOL_NAME=SSH
@@ -665,25 +665,33 @@ plugin.notificationconfig.EXEC_PROG=Execute a program :
 plugin.notificationconfig.DISPLAY_POPUP=Show a message in a pop-up window
 
 # ZRTP Securing
-impl.media.security.TOGGLE_OFF_SECURITY=Toggle secure call mode off
-impl.media.security.TOGGLE_ON_SECURITY=Try toggle secure call mode on
-impl.media.security.ENGINE_INIT_FAILURE=Securing engine initialization failure
-impl.media.security.ALLOW_CLEAR_REQUEST_FAILURE=Peer doesn't support unsecuring the call
-impl.media.security.DEFAULT_TOOLTIP=Secure status field
-impl.media.security.DEFAULT_MESSAGE=Not in call 
-impl.media.security.SECURED_TOOLTIP=Check this string by voice with your peer to verify secure comm link
-impl.media.security.SECURED_MESSAGE=Secured: 
-impl.media.security.NOT_SECURED_TOOLTIP=Secure mode not enabled
-impl.media.security.NOT_SECURED_MESSAGE=Not secured
-impl.media.security.ENGINE_FAIL_TOOLTIP=Engine failed at initialization
-impl.media.security.ENGINE_FAIL_MESSAGE=Engine failure
-impl.media.security.SECURING_FAIL_TOOLTIP=Securing call failed
-impl.media.security.UNSECURED_AT_REQUEST=Call unsecured at request
-impl.media.security.PEER_UNSUPPORTED_SECURITY=<html>You have enabled secure init mode<br/>You can't switch off this mode at this moment<br/>The call is not secured yet anyway</html>
-impl.media.security.PEER_UNSUPPORTED_TOOLTIP=Securing call not supported/enabled by the other peer
-impl.media.security.PEER_TOGGLED_OFF_SECURITY_MESSAGE=Call peer toggled secure mode off
-impl.media.security.PEER_TOGGLED_OFF_SECURITY_SECTION=Secure Off
-impl.media.security.UNSECURED_AT_PEER_REQUEST_TOOLTIP=Call unsecured at peer request
+impl.media.security.INFO=ZRTP Security information
+impl.media.security.WARNING=ZRTP Security warning
+impl.media.security.SEVERE=ZRTP Security error
+impl.media.security.ZRTP=ZRTP Security protocl error
+impl.media.security.WARNING_NO_RS_MATCH=<html>No retained shared secret available.<br/><b>SAS verification is recommended</b></html>
+impl.media.security.WARNING_NO_EXPECTED_RS_MATCH=<html>An expected retained shared secret is missing.<br/><b>SAS verification is required</b><br/>If SAS codes do not match then hangup and try again</html>
+impl.media.security.SEVERE_GENERIC_MSG=<html>A severe security problem was detected.<br/><b>Your call is not secure</b><br/>Error code: {0}</html>
+impl.media.security.ZRTP_GENERIC_MSG=<html>A severe ZRTP problem was detected.<br/><b>Your call is not secure</b><br/>Error code: {0}</html>
+impl.media.security.SECURITY_OFF=Call encryption support off
+impl.media.security.SECURITY_ON=Call encryption support on
+#impl.media.security.ENGINE_INIT_FAILURE=Securing engine initialization failure
+#impl.media.security.ALLOW_CLEAR_REQUEST_FAILURE=Peer doesn't support unsecuring the call
+#impl.media.security.DEFAULT_TOOLTIP=Secure status field
+#impl.media.security.DEFAULT_MESSAGE=Not in call 
+#impl.media.security.SECURED_TOOLTIP=Check this string by voice with your peer to verify secure comm link
+#impl.media.security.SECURED_MESSAGE=Secured: 
+#impl.media.security.NOT_SECURED_TOOLTIP=Secure mode not enabled
+#impl.media.security.NOT_SECURED_MESSAGE=Not secured
+#impl.media.security.ENGINE_FAIL_TOOLTIP=Engine failed at initialization
+#impl.media.security.ENGINE_FAIL_MESSAGE=Engine failure
+#impl.media.security.SECURING_FAIL_TOOLTIP=Securing call failed
+#impl.media.security.UNSECURED_AT_REQUEST=Call unsecured at request
+#impl.media.security.PEER_UNSUPPORTED_SECURITY=<html>You have enabled secure init mode<br/>You can't switch off this mode at this moment<br/>The call is not secured yet anyway</html>
+#impl.media.security.PEER_UNSUPPORTED_TOOLTIP=Securing call not supported/enabled by the other peer
+#impl.media.security.PEER_TOGGLED_OFF_SECURITY_MESSAGE=Call peer toggled secure mode off
+#impl.media.security.PEER_TOGGLED_OFF_SECURITY_SECTION=Secure Off
+#impl.media.security.UNSECURED_AT_PEER_REQUEST_TOOLTIP=Call unsecured at peer request
 
 # Profiler4J
 plugin.profiler.PLUGIN_NAME=Profiler4j
