--- a/src/native/ffmpeg/README
+++ b/src/native/ffmpeg/README
@@ -25,3 +25,18 @@
   --disable-debug \
   --disable-ffserver --disable-ffplay --disable-ffmpeg \
   --disable-pthreads --enable-w32threads
+
+- Linux, Mac OS X
+
+./configure \
+  --disable-mmx \
+  --enable-static --disable-shared --shlibdir=. \
+  --disable-encoders --disable-decoders --disable-muxers --disable-demuxers \
+  --disable-parsers --disable-bsfs --disable-protocols --disable-devices \
+  --disable-network \
+  --enable-libx264 --enable-gpl --enable-parser=h264 --enable-encoder=libx264 \
+  --enable-decoder=h264 --enable-muxer=h264 --enable-demuxer=h264 \
+  --extra-ldflags=-L$X264_HOME --extra-cflags=-I$X264_HOME \
+  --disable-debug \
+  --disable-ffserver --disable-ffplay --disable-ffmpeg \
+  --enable-pthreads
