Menu mnemonic for Help > About
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4946 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -380,7 +380,7 @@ plugin.aimaccregwizz.PROXY_PASSWORD=Proxy password
 plugin.branding.ABOUT_WINDOW_TITLE=About {0}
 plugin.branding.LOGO_MESSAGE=Open Source VoIP & Instant Messaging
 plugin.branding.LOADING=Loading
-plugin.branding.ABOUT_MENU_ENTRY=About
+plugin.branding.ABOUT_MENU_ENTRY=&About
 plugin.branding.WELCOME_MESSAGE=<DIV color={0}>The {1} is currently under active development. \
                The version you are running is only experimental and MAY NOT \
                work as expected. Please refer to {2} for more information.</DIV>
