--- a/resources/languages/resources_de.properties
+++ b/resources/languages/resources_de.properties
@@ -203,7 +203,7 @@ service.gui.REMOVE_GROUP=&Lösche Gruppe
 service.gui.RENAME=&Umbenennen
 service.gui.RENAME_CONTACT=Kontakt umbenennen
 service.gui.RENAME_CONTACT_WIZARD=Bitte geben Sie den Namen für den Kontakt ein.
-service.gui.RENAME_GROUP=Gruppe umbenenne
+service.gui.RENAME_GROUP=Gruppe umbenennen
 service.gui.RENAME_GROUP_INFO=Bitte geben Sie den Namen für die Gruppe ein.
 service.gui.REQUEST=&Anforderung
 service.gui.REQUEST_AUTHORIZATION=&Authorisierungsanforderung
