minor branding fixes: year, ampersand
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4954 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources_de.properties
+++ b/resources/languages/resources_de.properties
@@ -312,13 +312,13 @@ plugin.aimaccregwizz.PROXY_PASSWORD=Proxy password
 
 # branding
 plugin.branding.ABOUT_WINDOW_TITLE=Über {0}
-plugin.branding.LOGO_MESSAGE=Open Source VoIP & Instant Messaging
+plugin.branding.LOGO_MESSAGE=Open Source VoIP && Instant Messaging
 plugin.branding.LOADING=Lade
 plugin.branding.ABOUT_MENU_ENTRY=Über
 plugin.branding.WELCOME_MESSAGE=<DIV color={0}>The {1} is currently under active development. \
                The version you are running is only experimental and MAY NOT \
                work as expected. Please refer to {2} for more information.</DIV>
-plugin.branding.COPYRIGHT=<DIV><font size=3 color={0}>(c)2003-2007 Copyright \
+plugin.branding.COPYRIGHT=<DIV><font size=3 color={0}>(c)2003-2009 Copyright \
           <b>sip-communicator.org</b>. All rights reserved. Visit \
           <a href="http://sip-communicator.org">http://sip-communicator.org</a>.\
           </font></DIV>
