Fixes issues: 555: Unproper handling of invalid dst addresses in p2p accounts 556: Creating a SIP acc for a non-existant domain shows no error
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4956 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -212,7 +212,7 @@ service.gui.NO_MESSAGE=No message
 service.gui.NO_GROUP_CHAT_ACCOUNT_AVAILABLE=No accounts, supporting multi user chat found. Check sip-communicator.org for more information on which protocols support multi user chat.
 service.gui.NON_EMPTY_CHAT_WINDOW_CLOSE=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 service.gui.NON_EXISTING_USER_ID=The {0} server does not recognize specified user id.
-service.gui.NOTIFICATIONS=Notifications 
+service.gui.NOTIFICATIONS=Notifications
 service.gui.OK=&OK
 service.gui.OFFLINE=Offline
 service.gui.OLDER_CALLS=Older calls
@@ -294,6 +294,7 @@ service.gui.TYPE_YOUR_REQUEST=Type your request here
 service.gui.USER_IDENTIFIER=User identifier:
 service.gui.USER_EXISTS_ERROR=This user already exists on the selected network. Please choose another user or network.
 service.gui.USERNAME_NULL=Please fill the name of your account.
+service.gui.ACCOUNT_CREATION_FAILED=We failed to create your account due to the following error: {0}.
 service.gui.UNKNOWN=Unknown user
 service.gui.MSG_DELIVERY_UNKNOWN_ERROR=Unknown error has occured while delivering your message.
 service.gui.UNREGISTERED_MESSAGE=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
@@ -337,7 +338,7 @@ impl.systray.ONLINE_STATUS=Online
 impl.systray.OFFLINE_STATUS=Offline
 impl.systray.FAILED_TO_OPEN_ADD_CONTACT_DIALOG=Failed to open the "Add Contact" dialog.
 
-# account info 
+# account info
 plugin.accountinfo.TITLE=Account Info
 plugin.accountinfo.BROWSE=Browse
 plugin.accountinfo.EXTENDED=Extended
@@ -508,7 +509,7 @@ plugin.mailbox.CONFIRM=Confirm
 plugin.mailbox.DEFAULTS=Defaults
 plugin.mailbox.MAILBOX=Mailbox
 
-# msn accregwizz 
+# msn accregwizz
 plugin.msnaccregwizz.PROTOCOL_NAME=MSN
 plugin.msnaccregwizz.PROTOCOL_DESCRIPTION=A protocol to connect and chat on the  MSN Service.
 plugin.msnaccregwizz.USERNAME=Email:
@@ -535,7 +536,7 @@ You can add RSS feeds to your contact list using the "Add contact" wizard. Fill 
 plugin.rssaccregwizz.ACCOUNT_INFO_TITLE=RSS Account Information
 plugin.rssaccregwizz.ACCOUNT_ATTENTION=Please read attentively the information provided below!
 plugin.rssaccregwizz.CONFIRM_ACCOUNT_REMOVAL=The folloing RSS flow seems to be no longer accessible. Would you like to remove it?\n\n Address: {0}
-plugin.rssaccregwizz.CONFIRM_ACCOUNT_REMOVAL_TITLE=Remove missing contactems to be no longer accessible. Would you like to remove it?\n\n 
+plugin.rssaccregwizz.CONFIRM_ACCOUNT_REMOVAL_TITLE=Remove missing contactems to be no longer accessible. Would you like to remove it?\n\n
 
 # simple accregwizz
 plugin.simpleaccregwizz.INITIAL_ACCOUNT_REGISTRATION=Configure all your favorite protocols in one click.
@@ -678,9 +679,9 @@ impl.media.security.SECURITY_ON=Call encryption support on
 #impl.media.security.ENGINE_INIT_FAILURE=Securing engine initialization failure
 #impl.media.security.ALLOW_CLEAR_REQUEST_FAILURE=Peer doesn't support unsecuring the call
 #impl.media.security.DEFAULT_TOOLTIP=Secure status field
-#impl.media.security.DEFAULT_MESSAGE=Not in call 
+#impl.media.security.DEFAULT_MESSAGE=Not in call
 #impl.media.security.SECURED_TOOLTIP=Check this string by voice with your peer to verify secure comm link
-#impl.media.security.SECURED_MESSAGE=Secured: 
+#impl.media.security.SECURED_MESSAGE=Secured:
 #impl.media.security.NOT_SECURED_TOOLTIP=Secure mode not enabled
 #impl.media.security.NOT_SECURED_MESSAGE=Not secured
 #impl.media.security.ENGINE_FAIL_TOOLTIP=Engine failed at initialization
