Resolve Issue 519 and minor cosmetic changes to NewStatusMessageDialog
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4974 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -206,6 +206,7 @@ service.gui.NEW=&New
 service.gui.NEW_ACCOUNT=Add &new account
 service.gui.NEW_MESSAGE=New message
 service.gui.NEW_NAME=New name
+service.gui.NEW_STATUS_MESSAGE=New status message
 service.gui.NO=No
 service.gui.NO_AVAILABLE_ROOMS=The list of rooms for this server is currently not available.
 service.gui.NO_MESSAGE=No message
